# FancyConsole

./: CMakeLists.txt
FancyConsole/: ansi.hpp  progressbar.hpp  unicode.hpp
tests/: CMakeLists.txt  testing.cpp
